@@ -23,9 +23,12 @@ our $VERSION = '2.020001';
 
 =cut
 
-use Moose qw( has extends override );
+use Moose qw( has extends override around );
+use Dist::Zilla::Util::ConfigDumper qw( config_dumper );
 extends 'Dist::Zilla::Plugin::MinimumPerl';
 use namespace::autoclean;
+
+around dump_config => config_dumper( __PACKAGE__, { attrs => [ 'detected_perl', 'fiveten' ] } );
 
 has 'detected_perl' => (
   is         => 'rw',
